dev/POCO/TEST/NEG/NOELSE.POC
/* Test what happens when there's no body of an else statement */
#pragma poco echo "expect>expecting a number, variable, or string got '}'"

main()
{
if (1)
	puts("This should not compile");
else
}


